--- a/plungr/app/views/layouts/application.html.erb
+++ b/plungr/app/views/layouts/application.html.erb
@@ -29,7 +29,9 @@
 			<li><a href="mailto:maldaba3@gmail.com">Email</a></li>
 		</ul>
 
-		<p class="sign_in">Admin Login</p>
+		<% if !user_signed_in? %>
+			<p class="sign_in">Admin Login</p>
+		<% end %>
 	</div>
 
 	<div id="main_content">
@@ -42,10 +44,16 @@
 				<%= link_to "Back to All Posts", root_path %>
 			<% end %>
 
-			<div class="buttons">
-				<button class="button"><%= link_to "New Post", new_post_path %></button>
-				<button class="button">Log Out</button>
-			</div>
+			<% if user_signed_in? %>
+				<div class="buttons">
+					<button class="button"><%= link_to "New Post", new_post_path %></button>
+					<button class="button"><%= link_to "Log Out", destroy_user_session_path, method: :delete %></button>
+				</div>
+			<% else %>
+				<div class="buttons">
+					<button class="button"><%= link_to "Log In", new_user_session_path %></button>
+				</div>
+			<% end %>
 		</div>
 
 		<% flash.each do |name, msg| %>
