Loop workouts on Workouts#Index

--- a/fitemize/app/views/workouts/index.html.haml
+++ b/fitemize/app/views/workouts/index.html.haml
@@ -1,1 +1,3 @@
-%h1 This is the Workouts#Index placeholder
+- @workouts.each do |workout|
+	%h2= link_to workout.date, workout
+	%h3= workout.workout
